--- a/blog/templates/blog/search_list.html
+++ b/blog/templates/blog/search_list.html
@@ -4,10 +4,20 @@
 
 {% block content %}
 
+<div class="open_consultations">
+  {% for open_cons in open_consultations %}
+<ul>
+  <li><a href="{{ open_cons }}">{{ open_cons }}</a></li>
+</ul>
+{% endfor %}
+</div> <!--open-consultations-->
+
+<div class="search_box">
 <form type="get" action="." style="margin: 0">
   <input id="search_box" type="text" name="search_box" placeholder="Search...">
-  <button id="search_submit" type="submit">Submit</button>
+  <button id="search_submit" type="submit">Search</button>
 </form>
+</div><!-- search_box-->
 
 <table>
 
@@ -29,7 +39,6 @@
   </td>
 
   <td valign="top">
-
 
     {% for cons in consultations %}
   <ul>
