--- a/blog/static/css/govsite2.css
+++ b/blog/static/css/govsite2.css
@@ -52,6 +52,11 @@ td, th{
 
 }
 
+span{
+  color: #000000;
+  font-size: 16;
+}
+
 ul{
   list-style-type: none;
 }
@@ -69,6 +74,8 @@ p{
 #body{
   padding-bottom: 100px;
 }
+
+
 
 #footer{
   bottom: 0;
