some css changes

--- a/blog/templates/blog/govsitebase.html
+++ b/blog/templates/blog/govsitebase.html
@@ -3,9 +3,9 @@
 <div id="wrapper">
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope|Gloria+Hallelujah|Gruppo|Marmelad|Rancho" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{% static 'css/govsite2.css' %}">
+    <link rel="stylesheet" href="{% static 'css/govsite3.css' %}">
 
     <title>Gov Search</title>
   </head>
@@ -31,7 +31,8 @@
       <i class="fa fa-pinterest-p w3-hover-opacity"></i>
       <i class="fa fa-twitter w3-hover-opacity"></i>
       <i class="fa fa-linkedin w3-hover-opacity"></i>
-      <p style="color:#000000">&copy; copyright 2017 by <a href="http://www.talithagrace.com/" style="color:#000000">talitha-grace</a>. all rights reserved</p>
+      <p style="color:#000000">&copy; copyright 2017 by <a href="http://www.talithagrace.com/" style="color:#000000">talitha-grace</a>. all rights reserved.</p>
+      <p style="color:#000000">Contains public sector information licensed under the Open Government Licence v1.0</p>
     </div> <!--classfooter-->
   </div> <!--idfooter-->
 
