--- a/blog/static/css/govsite3.css
+++ b/blog/static/css/govsite3.css
@@ -10,7 +10,7 @@
   background-color: #ffffff;
   margin-top: 0;
   padding: 10px 10px 10px 30px;
-  opacity: 0.6;
+  opacity: 1;
   margin-right:20px;
 }
 
@@ -22,7 +22,7 @@
 }
 
 h1{
-  font-family: 'Gloria Hallelujah', cursive;
+  font-family: 'Exo 2', sans-serif;
 }
 
 .content_container{
@@ -38,7 +38,7 @@ h1{
   margin-bottom: 20px;
 }
 table{
-  font-family: 'Marmalad', sans-serif;
+  font-family: 'Exo 2', sans-serif;
   border-collapse: collapse;
   width: 100%;
   margin:auto;
@@ -54,7 +54,7 @@ td, th{
 
 span{
   color: #000000;
-  font-size: 16;
+  font-size: 28;
 }
 
 ul{
@@ -67,7 +67,7 @@ li{
 }
 p{
   color: #000000;
-  font-family: 'Marmelad', sans-serif;
+  font-family: 'Exo 2', sans-serif;
   font-size: 20;
 }
 
@@ -83,7 +83,7 @@ p{
   color: #000000;
   background-color: #ffffff;
   opacity: 0.6;
-  height: 60px;
+  height: 30px;
   width: 100%;
 }
 
