amended list of open consultations so it displays all pages of results

--- a/blog/templates/blog/govsitebase.html
+++ b/blog/templates/blog/govsitebase.html
@@ -12,6 +12,8 @@
   <div id="header">
   <div class="page-header">
     <h1><a href="/">Gov Search</a></h1>
+    <h2>This site lets you search for and view consultations, announcements and legislation by entering one key word
+    published by the Government</h2>
   </div> <!--page-header-->
   </div> <!--header-->
 
