--- a/blog/templates/blog/search_list.html
+++ b/blog/templates/blog/search_list.html
@@ -9,7 +9,8 @@
 
 <ul id="openconsultationslist" style="display:none;">
   {% for open_cons in open_consultations %}
-  <li><a href="{{ open_cons }}">{{ open_cons }}</a></li>
+<li><a href="{{ open_cons }}">{{ open_cons }}</a></li>
+  <!-- <li><a href="{{ open_cons }}">{{ con_text }}</a></li>-->
 {% endfor %}
 </ul>
 
