--- a/blog/templates/blog/search_list.html
+++ b/blog/templates/blog/search_list.html
@@ -5,8 +5,8 @@
 {% block content %}
 <body>
 <div class="open_consultations">
-  <h1><a>List of Open Consultations</a><span style="color:#000000; cursor:pointer" onclick="myFunction()"> &#10010;</span></h1>
-
+  <h1><a>There are currently {{ no_cons }} open consultations</a></h1>
+  <h2>Click here to view list<span style="color:#000000; cursor:pointer" onclick="myFunction()"> &#10010;</span></h2>
 <ul id="openconsultationslist" style="display:none;">
 {% for open_con in open_cons %}
   <li><a href="{{ open_con.hyperlink }}">
@@ -28,9 +28,9 @@
 <table>
 
   <tr>
-    <th>announcements (since January 2016)</th>
-    <th>consultations</th>
-    <th>legislation</th>
+    <th>News (Published by Government)</th>
+    <th>Consultations</th>
+    <th>Legislation</th>
   </tr>
 
 <tr>
